--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Monte Hermoso</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <script src="js/jquery.min.js"></script>
         <link rel="stylesheet" href="js/emy/emy.css" type="text/css">
         <link rel="stylesheet" href="js/emy/themes/emy/main.css" type="text/css">
         <script type="application/x-javascript" src="js/emy/emy.js"></script>
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-        <script src="js/gmaps.js"></script>
+        <!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <script src="js/gmaps.js"></script>-->
+        <link rel="stylesheet" type="text/css" href="js/leaflet/leaflet.css">
+        <script src="js/leaflet/leaflet.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/function.js"></script>
     </head>
@@ -19,11 +21,11 @@
           <h1 id="viewTitle"></h1>
         </header>
 
-        <section id="home" data-title="" selected="true">
+        <section id="home" data-title="INICIO" selected="true">
             <ul>
                 <li><a href="#cronograma">CRONOGRAMA</a></li>
                 <li><a href="#noticias">NOTICIAS</a></li>
-                <li><a href="#mapa" onClick="mapa()">MAPA</a></li>
+                <li><a href="#mapa" >MAPA</a></li>
                 <li><a href="#clima">CLIMA</a></li>
                 <li><a href="#faq">F.A.Q.</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
@@ -39,7 +41,7 @@
         </section>
         
         <section id="mapa" data-title="MAPA">
-		<div id="map_canvas"></div>
+        <div class="center leaflet-container leaflet-fade-anim" id="map_canvas" tabindex="0" style="position: relative;"></div>
 	</section>
         
         <section id="clima" data-title="CLIMA">
