--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="#faq">F.A.Q.</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
             </ul>
+            <center><img src="img/logo-master.png" width="90%" /></center>
         </section>
 
         <section id="cronograma" data-title="CRONOGRAMA">
