sin texto sombra
sin sombra

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <body>
         <div id="jqt" class="">
             <div id="about" class="selectable">
-                <p><img src="img/monte.png" /></p>
+                <p><img width="75%" src="img/monte.png" /></p>
                 <p><strong>Monte Hermoso</strong><br>Version 1.0 beta<br>
                     SECRETARIA DE TURISMO DE MONTE HERMOSO</p>
 				<p><em>Juan Pablo Sepúlveda.</em></p><br>
@@ -127,7 +127,7 @@
                         <h1>CRONOGRAMA</h1>
                         <a class="back" href="#home">Volver</a>
                     </div>
-<div class="scroll">
+<div class="scroll" style="background:#FFF;">
 		
 			<div class="main">
 				<ul class="cbp_tmtimeline" id="carga_cron">
@@ -213,7 +213,7 @@
                         <li><input type="email" name="email" placeholder="Email..." id="some_name"></li>
                         <li><input type="text" name="url" placeholder="Asunto..." id="some_name"></li>
                         <li><textarea placeholder="Ingrese su consulta"></textarea></li>
-                        <li><input type="submit" name="enviar" value="ENVIAR" class="redButton" style="width:100%; margin:0px; padding:0px;"></li>
+                        <li><a href="#" class="redButton" style="width:100%; margin:0px; padding:0px;">ENVIAR</a></li>
              </ul>
         </form>
     </div>
