--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                         <li class="arrow"><a href="#mapa" id="ver_map"><i class="fa fa-map-marker"></i> MAPA</a></li>
                         <li class="arrow"><a href="#clima" id="ver_clima"><i class="fa fa-sun-o"></i> CLIMA</a></li>
                         <!--<li class="arrow"><a href="#faq"><i class="fa fa-exclamation"></i> F.A.Q.</a> </li>-->
+                        <li class="arrow"><a href="#datos_utiles"><i class="fa fa-book"></i> DATOS ÚTILES</a></li>
                         <li class="arrow"><a href="#contacto"><i class="fa fa-phone"></i> CONTACTO</a></li>
                     </ul>   
                 </div>
@@ -195,13 +196,24 @@ By accessing and/or using this code snippet, you agree to AccuWeather’s terms 
     </div>
 </div>
 
-<div id="faq">
+<div id="datos_utiles">
                     <div class="toolbar">
                         <h1>MONTE HERMOSO</h1>
                         <a class="back" href="#home">Volver</a>
                     </div>
                     <div class="scroll">
-                        
+                        <ul>
+                        	<li><a href="tel:115"><b>Bomberos Voluntarios</b> <br>1º de Abril 370 / 100 (sin cargo)<br>481-888 0 115</a></li>
+                            <li><a href="tel:481509"><b>Guardavidas</b><br>Luzuriaga y el mar / 481-509</a></li>
+                            <li><a href="tel:107"><b>Hospital Dr. Ramón Carrillo</b><br>Pto. Madryn y Dr. R. Zabala / 107 (sin cargo)<br>481-127 o 333 . Turnos 483-200</a></li>
+                            <li><a href="tel:101"><b>Policia</b><br>Av. Pedro de Mendoza y Gral. San Martin<br>
+                            101 (sin cargo) 481-066 o 482-314</a></li>
+                            <li><a href="tel:102"><b>Prefectura Naval Argentina</b><br>Costanera J. D. Peron Oeste 235<br> 102 (sin cargo) 481-002</a></li>
+                            <li><a href="tel:481049"><b>Cooperativa Eléctrica Reclamos</b><br>Av. B. Blanca y P. de Mendoza<br>481-049 Administración<br>Las Dunas 27 / 481-184</a></li>
+                            <li><a href="481082"><b>Cooperativa Telefónica</b><br>Av. Pedro de Mendoza 268<br>481-082 Operadora: 481-000</a></li>
+                            <li><a href="tel:481088"><b>Municipalidad – Centro Cívico Alborada</b><br>N.Fossatty 265<br> 481-088 <br> 481-166 <br> 481-046 <br> 482-797 <br>482-798</a></li>
+                            <li><a href="tel:483111"><b>Oficina de Transito</b><br>Patagonia 370<br>483-111</a></li>
+                        </ul>
                     </div>
                 </div>  
 
